Release v1.37.1 Favorites UX and Scale
